обновил структуру папки sass

--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
   <head>
-    <title>Пагтест - индекс
+    <title>
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/main.min.css" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
-      <h1>Шапка</h1>
-    </header>На контентычах
-    <footer>
-      <h1>Футер</h1>
-    </footer>
   </body>
 </html>
